# rss-reader

./: CLAUDE.md  Cargo.toml  README.md  plaintext
src/: analysis.rs  feed.rs  main.rs  stock.rs  storage.rs
