[package]
name = "rss-reader"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "aaron_rss"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.11", features = ["rustls-tls", "json"], default-features = false }
feed-rs = "2"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"
regex = "1"
chrono = "0.4"
